--- a/css/app.css
+++ b/css/app.css
@@ -107,3 +107,30 @@ h1 {
     float: right;
     cursor: pointer;
 }
+
+.winBox {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.youWin {
+    background-color: #faca2d;
+    width: 80%;
+    height: 80%;
+    margin: 10% auto;
+    text-align: center;
+    border-radius: 45px;
+    padding: 20px;
+}
+
+.youWin h2 {
+    padding: 2px 16px;
+}
