--- a/css/app.css
+++ b/css/app.css
@@ -21,27 +21,40 @@ body {
     font-family: 'Coda', cursive;
 }
 
+img, embed, object, video {
+    max-width: 100%;
+}
+
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    max-width: 100%;
 }
 
-h1 {
-    font-family: 'Open Sans', sans-serif;
+header h1 {
+    font-size: 35px;
+    font-family: 'Coda', sans-serif;
     font-weight: 300;
+    text-align: center;
 }
+
+header {
+   min-width: 100%;
+
+}
+
 
 /*
  * Styles for the deck of cards
  */
 
 .deck {
-    width: 660px;
-    min-height: 680px;
+    min-height: 335px;
+    max-width: 300px;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-    padding: 32px;
+    padding: 15px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
     display: flex;
@@ -52,14 +65,15 @@ h1 {
 }
 
 .deck .card {
-    height: 125px;
-    width: 125px;
+    min-height: 60px;
+    min-width: 60px;
     background: #2e3d49;
     font-size: 0;
     color: #ffffff;
     border-radius: 8px;
     cursor: pointer;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
@@ -72,13 +86,13 @@ h1 {
 }
 
 .deck .card.show {
-    font-size: 33px;
+    font-size: 28px;
 }
 
 .deck .card.match {
     cursor: default;
     background: #02ccba;
-    font-size: 33px;
+    font-size: 28px;
 }
 
 /*
@@ -86,16 +100,25 @@ h1 {
  */
 
 .score-panel {
-    text-align: left;
+    text-align: center;
     width: 345px;
     margin-bottom: 10px;
+    max-width: 95%;
+    min-height: 30px;
+    border-radius: 25px;
+    background-color: rgba(168, 124, 204, 0.4);
+    padding-top: 2px
+}
+
+.stars, .restart, .moves, .timer {
+    font-size: 20px;
 }
 
 .score-panel .stars {
     margin: 0;
     padding: 0;
     display: inline-block;
-    margin: 0 5px 0 0;
+    margin: 0 5px 0 3px;
 }
 
 .score-panel .stars li {
@@ -104,9 +127,12 @@ h1 {
 }
 
 .score-panel .restart {
-    float: right;
+    display: inline-flex;
+    padding-left: 7px;
     cursor: pointer;
 }
+
+/*Styles for the modal*/
 
 .winBox {
     display: none;
@@ -123,14 +149,160 @@ h1 {
 
 .youWin {
     background-color: #faca2d;
-    width: 80%;
-    height: 80%;
+    width: 70%;
+    min-height: 50px;
     margin: 10% auto;
     text-align: center;
     border-radius: 45px;
     padding: 20px;
 }
 
-.youWin h2 {
+.youWin h1 {
+    font-size: 30px;
     padding: 2px 16px;
+}
+
+.score {
+    margin: auto;
+    font-size: 25px;
+}
+
+.score li {
+    list-style: none;
+    display: inline-block;
+}
+
+button {
+    min-height: 48px;
+    min-width: 185px;
+    font-size: 20px;
+    margin-bottom: 16px;
+    border-radius: 20px;
+    background-color: #71f707;
+    box-shadow: 0px 5px 1px #58b908;
+
+}
+
+button:hover {
+    cursor: pointer;
+    box-shadow: 0px 3px 1px #58b908;
+}
+
+button:active {
+    cursor: pointer;
+    box-shadow: 0px 1.5px 1px #58b908;
+    outline: none;
+}
+
+button:focus {
+    outline: 0;
+}
+
+/*Mobile Screens*/
+@media screen and (min-width: 375px){
+    .deck {
+        max-width: 340px;
+        min-height: 375px;
+    }
+
+    .deck .card {
+        min-height: 70px;
+        min-width: 70px;
+    }
+}
+
+@media screen and (min-width: 565px) {
+    .deck {
+        max-width: 520px;
+        min-height: 530px;
+    }
+
+    .deck .card {
+        min-height: 100px;
+        min-width: 100px; 
+    }
+
+    .deck .card.show {
+        font-size: 45px;
+    }
+
+    .deck .card.match {
+        font-size: 45px;
+    }
+
+    .score-panel{
+        width: 450px;
+    }
+
+    .stars, .restart, .moves, .timer {
+        font-size: 30px;
+    }
+}
+
+/*Mid-Size Screens*/
+@media screen and (min-width: 750px) {
+    header h1 {
+        font-size: 55px;
+    }
+
+    .deck {
+        max-width: 700px;
+        min-height: 780px;
+    }
+
+    .deck .card {
+        min-height: 150px;
+        min-width: 150px;
+    }
+
+    .deck .card.show {
+        font-size: 60px;
+    }
+
+    .deck .card.match {
+        font-size: 60px;
+    }
+
+    .score-panel{
+        width: 600px;
+    }
+
+    .stars, .restart, .moves, .timer {
+        font-size: 40px;
+    }
+
+    .youWin h1 {
+        font-size: 65px;
+    }
+
+    .score {
+        font-size: 50px;
+    }
+
+    button {
+        height: 65px;
+        width: 325px;
+        font-size: 35px;
+        margin-bottom: 45px;
+    }
+}
+
+@media screen and (min-width: 1000px){
+    header h1 {
+        font-size: 60px;
+    }
+
+    .deck {
+        max-width: 900px;
+        min-height: 850px;
+    }
+
+    .deck .card {
+        min-height: 175px;
+        min-width: 175px;
+    }
+
+    .score-panel{
+        width: 750px;
+    }
 }
